feat: add place image health queue
